--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,6 +2820,13 @@ input, select, textarea {
 			margin-top: 3em;
 			padding: 0;
 			cursor: pointer;
+			border-radius: 2%;			
+			border: solid  1px;
+			border-color: rgba(255, 255, 255, 0.205);
+			padding: 2% 1% 2% 1%;
+			background-color:#2e2e2e;
+			box-shadow: 2px 2px 4px #0000003d ;
+			
 		}
 
 			.features li:nth-child(1), .features li:nth-child(2), .features li:nth-child(3) {
@@ -2828,6 +2835,7 @@ input, select, textarea {
 
 			.features li > :last-child {
 				margin-bottom: 0;
+				
 			}
 
 			.features .image {
@@ -2843,6 +2851,21 @@ input, select, textarea {
 					display: block;
 					border-radius: 100%;
 					width: 10em;
+					
+				}
+
+				.features  h3 {
+					margin-block-end: 0em;
+					
+				}
+
+				.features #timeframe
+				{
+					font-size: 15pt;
+					color: #c2c2c2;
+					background-color:#3d3d3d;
+					margin-block-end: 1em;
+				
 				}
 
 		@media screen and (max-width: 980px) {
@@ -2889,12 +2912,13 @@ input, select, textarea {
 		height:100%;
 		overflow:auto;
 		background-color:rgba(0,0,0,0.4);
+		vertical-align: middle;
 	}
 
 	.w3-modal-content
 	{
 		margin:auto;
-		background-color:rgb(59, 59, 59);
+		background-color:rgb(45, 45, 45);
 		position:relative;
 		padding:0;
 		outline:0;
@@ -2902,6 +2926,52 @@ input, select, textarea {
 		max-width: calc(100% - 5em);
 		padding: 1em;
 		text-align: justify;
+	}
+	
+
+
+	.w3-modal .imgcontainer
+	{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		padding: .5%;
+
+	}
+	.w3-modal .imgcontainer img
+	{
+		padding: 1%;
+		border-radius: 4%;
+		width: 50%;
+	}
+
+	.w3-modal figcaption
+	{
+		text-align: center;
+	}
+
+
+	.features li:hover
+	{
+		background-color:rgb(49, 49, 49);
+	}
+
+
+	@media screen and (max-width: 480px) {
+
+		.w3-modal-content {
+			max-width: calc(100% - 1em);
+		}
+
+	}
+
+	@media screen and (max-width: 360px) {
+
+		.w3-modal-content {
+			max-width: 100%;
+		}
+
 	}
 
 	.w3-modal h2
@@ -2913,11 +2983,11 @@ input, select, textarea {
 	{
 		height: 1.5em;
 		min-width: 2em;
+		min-height: 1.5em;
 		width: 2em;
-		line-height: 50%;
-		padding: 1%;
+		line-height: 150%;
+		padding: 0%;
 		float: right;
-		vertical-align: middle;
 	}
 
 	.w3-animate-opacity
@@ -3757,6 +3827,24 @@ input, select, textarea {
 						}
 
 		}
+
+/* Projects */
+.image.fit .description {
+	position: absolute; /* Position the background text */
+	bottom: 0; /* At the bottom. Use top:0 to append it to the top */
+	background: rgb(0, 0, 0); /* Fallback color */
+	background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+	color: #f1f1f1; /* Grey text */
+	width: 100%; /* Full width */
+	height: 30%;
+	padding: 2%; /* Some padding */
+	border: inherit;
+	border-radius: inherit;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+	overflow: hidden;
+	font-size: 1vw;
+  }
 
 /* Footer */
 
